data/derived/comb/progs/unify/prog7569.ml.out
Characters 68-69:
  let fixpoint (f,b) = wwhile (let g x= let x = f in (x,b = f b) in g,b);;
                                                                      ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
